[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Teste.gd" type="Script" id=1]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.5
bottom_radius = 0.5

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.1
bottom_radius = 0.1
height = 4.0

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.0313726, 1, 0, 1 )

[node name="Teste" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, -1.19505, 0, 1.85506 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="MeshInstance2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.90003, 3.09555e-07 )
enabled = true
cast_to = Vector3( 0, 5, 0 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 1.70112, 0, 1.85506 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="MeshInstance3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.90003, 3.09555e-07 )
enabled = true
cast_to = Vector3( 0, 5, 0 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.0185413, 1.79889, 1.85506 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="MeshInstance4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.90003, 3.09555e-07 )
enabled = true
cast_to = Vector3( 0, 5, 0 )
